fix style : boutons illisibles

--- a/templates/participant/editLoggedUser.html.twig
+++ b/templates/participant/editLoggedUser.html.twig
@@ -13,7 +13,7 @@
     {{ form_start(editLoggedUserForm) }}
 
     {{ form_widget(editLoggedUserForm) }}
-    <button type="submit" class="btn">Modifier mon profil</button>
+    <button type="submit" class="bg-amber-500 border w-fit px-4 py-2 text-slate-100 rounded-xl">Modifier mon profil</button>
 
     {{ form_end(editLoggedUserForm) }}
 
@@ -24,7 +24,7 @@
     {{ form_start(editLoggedUserPasswordForm) }}
 
     {{ form_widget(editLoggedUserPasswordForm) }}
-    <button type="submit" class="btn">Modifier mon mot de passe</button>
+    <button type="submit" class="bg-amber-500 border w-fit px-4 py-2 text-slate-100 rounded-xl">Modifier mon mot de passe</button>
 
     {{ form_end(editLoggedUserPasswordForm) }}
 </main>
