--- a/templates/admin/gestionParticipants.html.twig
+++ b/templates/admin/gestionParticipants.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 <main class="container flex flex-col md:px-12 px-4 m-4 space-y-4">
-    <div class="container mx-auto px-4">
+    <div class="container mx-auto px-4 space-y-2">
         <h1>Gestion des Participants</h1>
 
         <div class="m-3">
@@ -18,7 +18,7 @@
         {{ form_start(uploadParticipantViaCsvForm) }}
 
         {{ form_widget(uploadParticipantViaCsvForm) }}
-        <button type="submit" class="btn">Charger le fichier</button>
+        <button type="submit" class="bg-amber-500 border w-fit px-4 py-2 text-slate-100 rounded-xl">Charger le fichier</button>
 
         {{ form_end(uploadParticipantViaCsvForm) }}
 
