fix retour accueil sur log + titre appli, titres des onglets

--- a/templates/affichage_sorties/index.html.twig
+++ b/templates/affichage_sorties/index.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AffichageSortiesController!
+{% block title %} 
+- Recherche des sorties
 {% endblock %}
 
 {% block body %}
