--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}- Créer un participant{% endblock %}
 
 {% block body %}
 <main class="container flex flex-col md:px-12 px-4 m-4 space-y-4">
