fix dates dans modifType et details sortie

--- a/templates/sortie/details-sortie.html.twig
+++ b/templates/sortie/details-sortie.html.twig
@@ -19,9 +19,9 @@
 				</p>
 			</a>
 			<p><span class=" font-semibold">Date et heure de la sortie :</span>
-				{{ sortie.dateHeureDebut | date("d/m/Y H:i", "Europe/Paris") }}</p>
+				{{ sortie.dateHeureDebut | date("d/m/Y H:i") }}</p>
 			<p><span class=" font-semibold">Date limite d'inscription :</span>
-				{{ sortie.dateLimiteInscription | date("d/m/Y H:i", "Europe/Paris") }}</p>
+				{{ sortie.dateLimiteInscription | date("d/m/Y H:i") }}</p>
 			<p><span class=" font-semibold">Nombre de places :</span>
 				{{ sortie.nbInscriptionMax }}</p>
 			<p><span class=" font-semibold">Durée :</span>
